// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are existing addresses 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Saved Payments
  </h1>
  <h3
    className="subHeading"
  >
    Credit Cards saved here will be available during checkout.
  </h3>
  <div
    className="content"
  >
    <button
      className="addButton"
      disabled={false}
      onClick={[MockFunction handleAddPayment]}
      type="button"
    >
      <span
        className="content"
      >
        <Icon
          classes={
            Object {
              "icon": "addIcon",
            }
          }
          size={24}
          src={[Function]}
        />
        <span
          className="addText"
        >
          Add a credit card
        </span>
      </span>
    </button>
    <div>
      <div />
      <div />
    </div>
    <div>
      <div />
      <div />
    </div>
    <div>
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`renders correctly when there are no existing addresses 1`] = `
<div
  className="root"
>
  Title
  <h1
    className="heading"
  >
    Saved Payments
  </h1>
  <h3
    className="subHeading"
  >
    Credit Cards saved here will be available during checkout.
  </h3>
  <div
    className="content"
  >
    <button
      className="addButton"
      disabled={false}
      onClick={[MockFunction handleAddPayment]}
      type="button"
    >
      <span
        className="content"
      >
        <Icon
          classes={
            Object {
              "icon": "addIcon",
            }
          }
          size={24}
          src={[Function]}
        />
        <span
          className="addText"
        >
          Add a credit card
        </span>
      </span>
    </button>
  </div>
</div>
`;
